fixed the loading error

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
 
 
 
-	<meta id="meta-image" property="og:image" itemprop="image" content="/tsl_icon.png" />
+	<meta id="meta-image" property="og:image" itemprop="image" content="./tsl_icon.png" />
 	<title>Kanye West List</title>
-	<link rel="icon" href="/favicon.ico" />
+	<link rel="icon" href="./favicon.ico" />
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@500;700&display=swap" rel="stylesheet" />
-	<link rel="stylesheet" type="text/css" href="/css/reset.css" />
-	<link rel="stylesheet" type="text/css" href="/css/typography.css" />
-	<link rel="stylesheet" type="text/css" href="/css/main.css" />
-	<link rel="stylesheet" type="text/css" href="/css/pages/list.css" />
-	<link rel="stylesheet" type="text/css" href="/css/pages/leaderboard.css" />
-	<link rel="stylesheet" type="text/css" href="/css/pages/roulette.css" />
-	<link rel="stylesheet" type="text/css" href="/css/components/nav.css" />
-	<link rel="stylesheet" type="text/css" href="/css/components/btn.css" />
-	<link rel="stylesheet" type="text/css" href="/css/components/tabs.css" />
+	<link rel="stylesheet" type="text/css" href="./css/reset.css" />
+	<link rel="stylesheet" type="text/css" href="./css/typography.css" />
+	<link rel="stylesheet" type="text/css" href="./css/main.css" />
+	<link rel="stylesheet" type="text/css" href="./css/pages/list.css" />
+	<link rel="stylesheet" type="text/css" href="./css/pages/leaderboard.css" />
+	<link rel="stylesheet" type="text/css" href="./css/pages/roulette.css" />
+	<link rel="stylesheet" type="text/css" href="./css/components/nav.css" />
+	<link rel="stylesheet" type="text/css" href="./css/components/btn.css" />
+	<link rel="stylesheet" type="text/css" href="./css/components/tabs.css" />
 	<script src="https://unpkg.com/vue@3.2.31/dist/vue.global.js"></script>
 	<script src="https://unpkg.com/vue-router@4.0.14/dist/vue-router.global.prod.js"></script>
-	<script type="module" src="/js/main.js"></script>
+	<script type="module" src="./js/main.js"></script>
 </head>
 
 <body id="app">
@@ -58,10 +58,10 @@
 			</router-link>
 			<div class="nav__actions">
 				<button class="nav__icon" @click.prevent="store.toggleDark()">
-					<img :src="store.dark ? '/assets/light.svg' : '/assets/dark.svg'" alt="" />
+					<img :src="store.dark ? './assets/light.svg' : './assets/dark.svg'" alt="" />
 				</button>
 				<a class="nav__icon" href="https://discord.gg/J5rXsNgWX6">
-					<img src="/assets/discord.svg" alt="Discord Logo" />
+					<img src="./assets/discord.svg" alt="Discord Logo" />
 				</a>
 				<a class="nav__cta type-label-lg"
 					href="https://forms.gle/nRbqkeXEE54kxYiE7"
